2009-09-30  Sancho Lerena  <slerena@artica.es>

	* integria.spec: New spec for RPM.

 	* integria_dbdata.sql: Updated SQL for new location of
	keygen (used in the RPM packages).

2009-09-28  Sancho Lerena  <slerena@artica.es>

	* index.php: Set develop flag to 0

2009-06-10  Esteban Sanchez  <estebans@artica.es>

	* inventories/inventory_reports_detail.php: Unclean the SQL
	sentence before executing.

2009-06-05  Esteban Sanchez  <estebans@artica.es>

	* extras/inventory_importer.php: Added process_values so any
	field can now use references to fields.

2009-06-05  Esteban Sanchez  <estebans@artica.es>

	* godmode/setup/inventories_setup.php: Removed debug output.

2009-06-05  Esteban Sanchez  <estebans@artica.es>

	* godmode/setup/inventories_setup.php: Added to repository. Editor
	for inventory extra fields.

	* include/functions_inventories.php: Added config variable to
	get_inventory_generic_labels() scope.

	* operation/side_menu.php: Added link to inventory extra fields
	editor.

2009-06-04  Esteban Sanchez  <estebans@artica.es>

	* integria_db.sql: Added tinventory_reports.

	* extras/inventory_importer.php: Added support to read from stdin.
	Avoid empty names. Get id inventory based on name and parent.
	Generic fields can receive the name of other field to get its value
	before updating.

	* include/functions_db.php: Added support to allow selecting what kind
	of result type to be fetched. Added process_sql_delete().

	* include/functions_inventories.php: Added
	get_inventory_generic_labels ().

	* inventories/inventory_detail.php: Fixed error messages.

	* inventories/inventory_extra.php: Added to repository. Extra fields
	for inventory objects.

	* inventories/inventory_reports.php: Added to repository. Inventory
	reports from a SQL sentence.

	* inventories/inventory_reports_detail.php: Added to repository.
	Inventory reports editor.

	* operation/side_menu.php: Added link to inventory reports.
