@@ -1,3 +1,10 @@
+2010-02-20  Sancho Lerena <slerena@artica.es>
+
+        * Created Branch for 2.0 source tree.
+
+        * Modified SQL to ignore integrial reference (not well
+        implemented, postponed to 2.1, which is fully implemented).
+
 2009-09-30  Sancho Lerena  <slerena@artica.es>
 
 	* integria.spec: New spec for RPM.
